# CUDA-Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  perf.xlsx
.github/: pull_request_template.md
scenes/: 911.json  challenger.json  chess.json  cornell-orig.json  cornell.json  dragon.json  duck.json  gltf.json  halo.json  pbr.json  sphere.json  ssaa.json  sss.json
src/: bvh.cpp  bvh.h  intersections.cu  intersections.h  main.cpp  optixDenoiser.cpp  optixDenoiser.h  pathtrace.cu  pathtrace.h  scene.cpp  scene.h  sceneStructs.h  stb.cpp
